# openarm_ws

./: .gitignore  README.md  frames_2026-01-13_07.59.53.gv  frames_2026-01-13_08.04.21.gv
openarm_mujoco/v1/: openarm_bimanual_cam_v3.xml  scene.xml
src/mujoco_ros2/model/: scene.xml
src/mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_cameras.cpp
src/openarm_description/urdf/robot/: openarm_robot.xacro  v10.urdf.xacro
src/openarm_grasp_planner/: package.xml
src/openarm_grasp_planner/launch/: full_integration.launch.py
src/openarm_grasp_planner/openarm_grasp_planner/: full_verification.py  grasp_planner.py  gripper_controller.py
src/openarm_mujoco_viewer/openarm_mujoco_viewer/: openarm_bimanual_viewer.py
src/openarm_ros2/openarm_bimanual_moveit_config/config/: kinematics.yaml  moveit.rviz
src/openarm_vision/openarm_vision/: banana_detector.py  virtual_camera.py
